--- a/index.html
+++ b/index.html
@@ -69,10 +69,110 @@
              </tr>
              <tr>
                  <td>0000001024</td>
+                 <td>PRE-PAID</td>
+                 <td>.000</td>
+                 <td>.000 N</td>
+                 <td>.000</td>
+                 <td>0.0</td>
+                 <td>-</td>
              </tr>
+            </table>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h1>ACCOUNT DETAILS</h1>
+            <h6>(Rates:638.98,Exemption:- 81.92,Rebate-194.97)</h6>
+        </div>
+
+        <div>
+            <table>
+                <tr>
+                    <th>DATE</th>
+                    <th>CODE</th>
+                    <th>DESCRIPTION</th>
+                    <th>UNITS</th>
+                    <th>TARIFF</th>
+                    <th>VALUE.</th>
+                 </tr>
+                 <tr>
+                     <td></td>
+                     <td></td>
+                     <td>OPENING BALANCE</td>
+                     <td></td>
+                     <td></td>
+                     <td>110,223.60</td>
+                     <td>-</td>
+                 </tr>
+
+                 <tr>
+                    <td>23/01/2022</td>
+                    <td>00S023</td>
+                    <td>SEWERAGE</td>
+                    <td>1.000</td>
+                    <td></td>
+                    <td>219.47</td>
+                </tr>
+
+                <tr>
+                    <td>23/01/2022</td>
+                    <td>00w008</td>
+                    <td>WATER</td>
+                    <td>1.000</td>
+                    <td></td>
+                    <td>516.76</td>
+                </tr>
+
+                <tr>
+                    <td>23/01/2022</td>
+                    <td>00S023</td>
+                    <td>RATES</td>
+                    <td></td>
+                    <td></td>
+                    <td>362.09</td>
+                </tr>
+
+                <tr>
+                    <td>23/01/2022</td>
+                    <td>00R007</td>
+                    <td>REFUSE</td>
+                    <td></td>
+                    <td></td>
+                    <td>164.00</td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td></td>
+                    <td>009008</td>
+                    <td>VAT</td>
+                    <td></td>
+                    <td></td>
+                    <td>135.03</td>
+                </tr>
+
+
+                <tr>
+                    <td></td>
+                    <td>009008</td>
+                    <td>INTEREST</td>
+                    <td></td>
+                    <td></td>
+                    <td>493.53</td>
+                </tr>
 
             </table>
         </div>
+       
     </section>
     
 </body>
