--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
   </head>
   <body>
     <section class="main-section">
-      <!-- logo -->
-      <div id="logo">
-        <img src="" alt="" />
-      </div>
+
 
       <div class="main-container">
-        <div style="text-align: right; margin-right: 180px;">
+        <div style="text-align: right; margin-right: 60px;">
         <h1>Emakagleni Local Municipality</h1>
-        <div style="margin-right: 90px;">
+        <div style="margin-right: 100px;">
           <p>PO Box 3 eMalahleni 1035</p>
           <p>Tel:013 690 6911</p>
           <p>Fax:013 690 6207</p>
@@ -33,7 +30,7 @@
           <strong>Payment Hours </strong> Mon to Thursday 7:30 to 16:30 Friday  07:30 to 12:30
        </p>
       </div>
-      <div style="margin-left: 415px;margin-bottom: 20px; font-size: 13px;">
+      <div style="margin-bottom: 20px; margin-left: 100px; font-size: 13px;">
         <p><strong>KWAGUQA</strong> Tel:(013) 698-0262 Fax:(013)690-6207</p>
         <p style="margin-top: 10px;"> <strong>OGGIES</strong> Tel:(013) 643-1027 Fax:(013)690-2039</p>
       </div>
@@ -66,7 +63,7 @@
     </section>
 
     <section>
-      <h1 style="text-align: center;padding: 5px;">METER READINGS</h1>
+      <h1 style="text-align: center;padding: 5px; border: 1px solid black;">METER READINGS</h1>
       <div class="table-container">
         <table style="width: 100%; background-color: ;">
           <tr> 
@@ -230,36 +227,38 @@
        <div>
         <h1><strong> REMITTANCE ADVICE</strong></h1>
         <div style="margin-right: 400px; margin-top: 20px;">
-        <div style="margin-top: 20px;">
-          <p><strong>BANK NAME:</strong>ABSA</p>
-          <p><strong>ACCOUNT NAME:</strong>Emalahleni Local Municipality</p>
-          <p><strong>ACCOUNT NUMBER:</strong>1360000091</p>
-          <p><strong>REFERENCE:</strong>0004002393</p>
+
+
+          <div style="margin-top: 20px;">
+          <p><strong>ACCOUNT NUMBER:</strong> <span class="text-space">0004002393</span></p>
+          <p><strong>CONSUMER NAME:</strong> <span class="text-space">NTHABISENG <br</span> </p>
+          <p><strong>TOTAL DUE:</strong> <span class="text-space">112,114.48</span></p>
+          <p><strong>TOTAL DUE ON OR BEFORE</strong> <span class="text-space">07/02/2022</span></p>
         </div>
         </div>
       </div>
 
       <div  style="margin-left: 50px;">
         <h1><strong>BANKING DETAILS </strong></h1>
-        <div style="margin-top: 20px;">
-              <p><strong>NUMBER:</strong> <span class="text-space">0004002393</span></p>
-          <p><strong>NAME:</strong> <span class="text-space">NTHABISENG <br</span> </p>
-          <p><strong>DUE:</strong> <span class="text-space">112,114.48</span></p>
-          <p><strong>DUE ON OR BEFORE</strong> <span class="text-space">07/02/2022</span></p>
+         <div style="margin-top: 20px;">
+          <p><strong>BANK NAME:</strong>ABSA</p>
+          <p><strong>ACCOUNT NAME:</strong>Emalahleni Local Municipality</p>
+          <p><strong>ACCOUNT NUMBER:</strong>1360000091</p>
+          <p><strong>REFERENCE:</strong>0004002393</p>
         </div>
       </div>
       </div>
 
       <section  style="flex; border-bottom: 1px solid;">
-        <p style="margin-left: 700px; margin-top: 10px ; padding: 5px;">00040000002393 </p>
+        <p style="margin-left: 700px; margin-bottom: 40px ; padding: 5px;margin-left: 450px;">00040000002393 </p>
 
-        <div style="margin-left: 100px; ">
-          <p>>>>>91 1810 0040 0239 36</p>
+        <div style="margin-left: 100px;">
+          <p style="margin-bottom: 20px;">>>>>91 1810 0040 0239 36</p>
           <p>11959 0000 0400 2393</p>
         </div>
        
         
-         <div style="text-align: right; margin-right: 25px;">
+         <div style="text-align: right; margin-right: 25px; font-size: 20px;">
           <p><strong>Printed By:</strong>MUNSYS_BRIGHTON</p>
         </div>
       </section> 
